# catalyst-backtest

./: .dockerignore  .env.r2.example  .gitignore  Cargo.toml  DESIGN.md  Makefile  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: deploy-api.yml  deploy-web.yml
apps/: README.md
apps/web/: .env.production.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apps/web/.storybook/: preview.tsx
apps/web/src/: App.tsx  main.js  main.tsx  styles.css  theme.ts  types.ts
apps/web/src/api/: adapters.ts  client.js  client.ts
apps/web/src/components/: ChartInteractionControls.tsx  CostAttribution.tsx  CoverageTimeline.tsx  DataTable.tsx  EquityDrawdownChart.tsx  GraphTopologyPreview.tsx  InitialPortfolioEditor.tsx  MarketDataSelector.tsx  MarketReplayChart.tsx  MetricStrip.tsx  ParametersPanel.tsx  RunReadinessRail.tsx  (+5 more)
crates/: README.md
crates/contracts/: Cargo.toml  README.md
crates/contracts/src/: graph.rs  lib.rs  market_data.rs  policy.rs  request.rs  result.rs  trace.rs
crates/contracts/tests/: roundtrip.rs
crates/execution-models/: Cargo.toml  README.md
crates/execution-models/src/: context.rs  lib.rs  limit.rs  outcome.rs  perp.rs  pricing.rs  swap.rs  yields.rs
crates/execution-models/tests/: execution.rs  issue_115_nonstable_yield_gas_and_value.rs  issue_117_margin_cap_regression.rs  issue_165_fee_reconciliation.rs
crates/graph-compiler/: Cargo.toml  README.md
crates/graph-compiler/src/: lib.rs
crates/graph-compiler/tests/: compiler.rs
crates/market-data-loader/: Cargo.toml  README.md
crates/market-data-loader/src/: lib.rs
crates/market-data-loader/tests/: loader.rs
crates/portfolio-ledger/: Cargo.toml  README.md
crates/portfolio-ledger/src/: error.rs  lib.rs  position.rs
crates/portfolio-ledger/tests/: ledger.rs
crates/result-reporter/: Cargo.toml  README.md
crates/result-reporter/src/: lib.rs
crates/result-reporter/tests/: reporter.rs
crates/simulation-engine/: Cargo.toml  README.md
crates/simulation-engine/examples/: run_strategy_dataset.rs
crates/simulation-engine/src/: engine.rs  exec_graph.rs  lib.rs  market.rs
crates/simulation-engine/tests/: accrual_gaps.rs  amm_slippage.rs  catalog_strategies.rs  conformance.rs  coverage_gaps.rs  derived.rs  engine.rs  examples.rs  execution_overrides.rs  funding_interval.rs  honest_policy_surface.rs  issue_114_yield_simple_not_compounding.rs  issue_115_nonstable_yield_equity.rs  issue_116_deferral_edge_cases.rs  issue_116_next_open_booking.rs  issue_118_113_elapsed_accrual_regression.rs  issue_119_price_lookups.rs  issue_120_liquidation_realism.rs  issue_121_fidelity.rs  issue_122_same_bar_convention.rs  issue_124_resting_reservation.rs  issue_160_strict_config_parsing.rs  issue_161_combinator_gaps.rs  issue_162_amm_limit_fill.rs  issue_165_funding_shortfall.rs  limit_orders.rs  no_look_ahead.rs  signals.rs  signed_threshold.rs  sizing.rs  strategy_repository.rs  variables.rs
crates/simulation-policies/: Cargo.toml  README.md
crates/simulation-policies/src/: lib.rs  profiles.rs  resolve.rs
crates/simulation-policies/tests/: policies.rs  schema_conformance.rs
crates/simulation-service/: Cargo.toml  README.md
crates/simulation-service/src/: error.rs  handlers.rs  lib.rs  main.rs  state.rs  support.rs  worker.rs
crates/simulation-service/tests/: service.rs
docs/: chains-ledgers-and-venues.md  crypto-trading-primer.md  data-sources.md  market-data-construction.md  market-data-intervals.md  market-data-primer.md  market-data-storage.md  production-readiness.md  run-setup-and-history-design-spec.md  simulation-policies.md  system-design.md  ui-ux-questions.md  web-app-workflow.md
docs/adr/: 0001-language-boundary.md  0002-strategy-surface.md
docs/logic/: README.md  correctness-model.md  derived-sources.md  fees.md  fill-price-selection.md  funding-accrual.md  gas.md  limit-orders.md  liquidation.md  missing-data-and-coverage.md  partial-fills.md  portfolio-valuation.md  same-tick-ordering.md  signals.md  sizing.md  slippage-models.md  yield-accrual.md
infra/: Dockerfile.api  README.md  fly.toml
schemas/: README.md  backtest-request.schema.json  backtest-result.schema.json  graph.schema.json  market-data-bundle.schema.json  simulation-policy.schema.json  simulation-trace.schema.json
schemas/examples/: backtest-request.json  backtest-result.json  graph.limit-order.json  graph.ma-cross.json  graph.perp-signal.json  graph.relative-sizing.json  graph.stop-loss.json  graph.swap.json  graph.threshold-composed.json  graph.threshold-funding.json  graph.trend-filter-dip.json  graph.yield.json  market-data-bundle.json  simulation-policy.strict_v1.json  simulation-trace.json
scripts/: clean_candles.py  deploy-api-fly.sh  deploy-web-cloudflare.sh  fetch_dune.py  fetch_dune_base.py  fetch_hyperliquid_recent.py  upload_r2.py  validate_market_data.py
strategies/: README.md  catalog.json
strategies/graphs/: g01_evm_swap_buy_eth_base.json  g02_hl_spot_buy_eth.json  g03_hl_spot_buy_then_sell.json  g04_hl_spot_ladder.json  g05_hl_perp_open_long.json  g06_hl_perp_open_close.json  g07_hl_perp_round_trips.json  g08_evm_yield_deposit.json  g09_evm_yield_deposit_withdraw_partial.json  g10_evm_yield_deposit_withdraw_all.json  g11_evm_swap_if_below.json  g12_evm_swap_dca_ladder.json  g13_hl_perp_long_short_swings.json  g14_hl_perp_add_close.json  g15_evm_yield_add_withdraw.json  g16_direct_evm_swap_buy_eth_base.json  g17_direct_hl_spot_buy_eth.json  g18_direct_hl_spot_sell_eth.json  g19_funding_carry.json  g20_golden_cross.json  g21_donchian_breakout.json  g22_momentum_roc.json  g25_yield_rotation.json  g26_short_momentum.json
strategies/scenarios/: eth_dip_then_rally.json  eth_flat_2000.json  eth_selloff_liquidation.json
tests/: README.md
tests/conformance/: test_conformance.py
tests/fixtures/: sample_graphs.json
tests/fixtures/market_data/: eth_2h.json
tests/golden/: 01_evm_swap_buy.json  02_hl_spot_buy_then_sell.json  03_signal_gated_swap.json  04_perp_round_trip.json  05_yield_deposit_withdraw.json
(+19 files in other folders)
