[project]
name = "catalyst-backtest-workspace"
version = "0.1.0"
description = "Python workspace for Catalyst backtesting packages"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "jsonschema>=4.21",
  "referencing>=0.34",
  "httpx>=0.27",
  "catalyst-contracts",
  "catalyst-market-data-core",
  "catalyst-market-data",
  "catalyst-market-data-dune",
  "catalyst-market-data-bigquery",
  "catalyst-client",
]

[tool.uv.workspace]
members = [
  "packages/*",
]

[tool.uv.sources]
catalyst-contracts = { workspace = true }
catalyst-market-data-core = { workspace = true }
catalyst-market-data = { workspace = true }
catalyst-market-data-dune = { workspace = true }
catalyst-market-data-bigquery = { workspace = true }
catalyst-client = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
