[package]
name = "catalyst-execution-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
catalyst-contracts = { path = "../contracts" }
catalyst-portfolio-ledger = { path = "../portfolio-ledger" }
catalyst-simulation-policies = { path = "../simulation-policies" }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
