[package]
name = "catalyst-market-data-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
catalyst-contracts = { path = "../contracts" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
arrow = "53"
parquet = "53"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
