[package]
name = "catalyst-result-reporter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
catalyst-contracts = { path = "../contracts" }
rust_decimal = "1"
serde_json = "1"

[dev-dependencies]
serde_json = "1"
