[package]
name = "catalyst-simulation-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
catalyst-execution-models = { path = "../execution-models" }
catalyst-portfolio-ledger = { path = "../portfolio-ledger" }
catalyst-simulation-policies = { path = "../simulation-policies" }

