[package]
name = "catalyst-simulation-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
catalyst-contracts = { path = "../contracts" }
catalyst-execution-models = { path = "../execution-models" }
catalyst-portfolio-ledger = { path = "../portfolio-ledger" }
catalyst-simulation-policies = { path = "../simulation-policies" }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }

[dev-dependencies]
serde_json = "1"
