[package]
name = "catalyst-simulation-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "catalyst-simulation-service"
path = "src/main.rs"

[dependencies]
catalyst-contracts = { path = "../contracts" }
catalyst-simulation-engine = { path = "../simulation-engine" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
