[package]
name = "catalyst-simulation-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "catalyst-simulation-service"
path = "src/main.rs"

[dependencies]
catalyst-contracts = { path = "../contracts" }
catalyst-graph-compiler = { path = "../graph-compiler" }
catalyst-simulation-policies = { path = "../simulation-policies" }
catalyst-simulation-engine = { path = "../simulation-engine" }
catalyst-result-reporter = { path = "../result-reporter" }
catalyst-market-data-loader = { path = "../market-data-loader" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
arrow = "53"
parquet = "53"
tempfile = "3"
